Compiler/tests/good/for3.nx

for(val x : int = 3 ; x < 10 ; x + 1)
{    
    x := 20;
    printn(x);
}
