Compiler/tests/bad/for4.nx
val x : int = 3;

for(val x : int = 3; x < 20 ; x + 2)
{   
    val x : int = 4;
    
    printn(x);
}
